--- a/alcohol.html
+++ b/alcohol.html
@@ -62,25 +62,35 @@
 </div>
 
 <script>
-//--- Add/Remove to pack
-    $('.add').click(function() {
+    //--- Add/Remove to pack
+    $('.add').click(function () {
 
         var $h3 = $(event.target).closest('.serviceTile').find('h3');
         var $title = $($h3).text();
         var delButton = "<button class='delete'>remove</button>";
 
         $('ul.sidebar-nav-right').append('<li>' + $title + delButton + '</li>');
-//        $('.add').prop('disabled', true);
+        //        $('.add').prop('disabled', true);
 
     });
 
-    $(document).on("click", ".delete", function() {
+    $("a.add").on("click", function (event) {
+        event.preventDefault();
+
+        if $(this).hasClass('clicked') {
+            return false;
+        } else {
+            $(this).addClass('clicked').trigger('click');
+        }
+    });
+
+    $(document).on("click", ".delete", function () {
         $(this).parent('li').remove();
         $(this).remove();
 
     });
-    
-//--- Loading Service Details ---//
+
+    //--- Loading Service Details ---//
 
     $('button').click(function (e) {
 
@@ -89,6 +99,6 @@
 
         e.preventDefault();
         $('#serviceDetailsPanel').load(fileName);
-        
+
     });
 </script>
