--- a/alcohol.html
+++ b/alcohol.html
@@ -63,36 +63,46 @@
 
 <script>
     //--- Add/Remove to pack
-    $('.add').click(function () {
-
-        var $h3 = $(event.target).closest('.serviceTile').find('h3');
+    function addToPack(e, eventTarget, addBtn) {
+        var $h3 = eventTarget.closest('.serviceTile').find('h3');
+        var $sourceId = eventTarget.closest('.serviceTile').find('button').attr('id');
         var $title = $($h3).text();
-        var delButton = "<button class='delete'>remove</button>";
+        var $delButton = "<button id=source_'" + $sourceId + "' class='delete'>remove</button>";
 
-        $('ul.sidebar-nav-right').append('<li>' + $title + delButton + '</li>');
-        //        $('.add').prop('disabled', true);
+        //e.preventDefault();
+        $('ul.sidebar-nav-right').append('<li >' + $title + $delButton + '</li>');
+        addBtn.addClass('clicked');
+    }
 
+
+    $('.add').click(function(e) {
+        addToPack(e, $(event.target), $(this));
+
+        //--- Change link text to "Added"
+        //        $(this).text($(this).text() == 'Add to pack' ? 'Added' : 'Add to pack');
+        var $linkText = ($('.add').html() === 'Add to pack') ? 'Added' : 'Add to pack';
+        $(this).html($linkText);
+        return false;
     });
 
-    $("a.add").on("click", function (event) {
-        event.preventDefault();
+    //--- Remove from pack and reactivate 'Add to pack' --//
+    $(document).on("click", ".delete", function() {
+        var $sourceId = $(this).attr('id').replace('source_', '');
+        var $linkText = ($('.add').html() === 'Added') ? 'Add to pack' : 'Added';
 
-        if $(this).hasClass('clicked') {
-            return false;
-        } else {
-            $(this).addClass('clicked').trigger('click');
-        }
-    });
-
-    $(document).on("click", ".delete", function () {
+        $('button[id=' + $sourceId + ']').closest('.serviceTile').find('a.add').removeClass('clicked');
+        $('button[id=' + $sourceId + ']').closest('.serviceTile').find('a.add').html($linkText);
         $(this).parent('li').remove();
         $(this).remove();
-
+        return false;
     });
+
+
+
 
     //--- Loading Service Details ---//
 
-    $('button').click(function (e) {
+    $('button').click(function(e) {
 
         var buttonId = this.id;
         var fileName = buttonId + ".html";
