--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -89,6 +89,7 @@
             <div id="results-controlbar">
                 <a href="#!" id="refineBtn">Refine</a>
                 <a href="#!" id="addAll">Add all to pack</a>
+                <a href="#!" id="removeAll">Remove all from pack</a>
             </div>
 
             <div id="searchResultsPanel">
