--- a/productsandservices.html
+++ b/productsandservices.html
@@ -62,23 +62,23 @@
 </div>
 
 <script>
-//--- Add/Remove to pack
-    $('.add').click(function() {
+////--- Add/Remove to pack
+//    $('.add').click(function() {
 
-        var $h3 = $(event.target).closest('.serviceTile').find('h3');
-        var $title = $($h3).text();
-        var delButton = "<button class='delete'>remove</button>";
+//        var $h3 = $(event.target).closest('.serviceTile').find('h3');
+//        var $title = $($h3).text();
+//        var delButton = "<button class='delete'>remove</button>";
 
-        $('ul.sidebar-nav-right').append('<li>' + $title + delButton + '</li>');
-//        $('.add').prop('disabled', true);
+//        $('ul.sidebar-nav-right').append('<li>' + $title + delButton + '</li>');
+////        $('.add').prop('disabled', true);
 
-    });
+//    });
 
-    $(document).on("click", ".delete", function() {
-        $(this).parent('li').remove();
-        $(this).remove();
+//    $(document).on("click", ".delete", function() {
+//        $(this).parent('li').remove();
+//        $(this).remove();
 
-    });
+//    });
     
 //--- Loading Service Details ---//
 
