updated custom.js and commented out allresults.html js

--- a/24001.html
+++ b/24001.html
@@ -1,5 +1,5 @@
 <div id="serviceDetails" class="col-xs-12">
-    <h1 id="serviceHeader">Restaurant and Cafe Licence - Victoria</h1>
+    <h1 id="serviceHeader" data-url="https://ablisui.uat.business.gov.au/service/vic/restaurant-and-cafe-licence/24001">Restaurant and Cafe Licence - Victoria</h1>
     <div id="summary">
         <div id="serviceDetailDescription" class="serviceSection">
             <h2>Description</h2>
