--- a/23994.html
+++ b/23994.html
@@ -1,6 +1,6 @@
 <main class="wrapper">
     <div id="serviceDetails" class="col-xs-12">
-        <h1 id="serviceHeader">General Licence - Victoria</h1>
+        <h1 id="serviceHeader" data-url="https://ablisui.uat.business.gov.au/service/vic/general-licence/23994">General Licence - Victoria</h1>
         <div id="summary">
             <div id="serviceDetailDescription" class="serviceSection">
                 <h2>Description</h2>
