Added .toolbar class

--- a/index.html
+++ b/index.html
@@ -84,11 +84,13 @@
 
         <!-- Left Column -->
         <div class="middle-left">
-            <a href="#menu-toggle-left" class="sidebar-toggle" id="menu-toggle-left" title="Filter by category"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
+            <div class="toolbar">
+                <a href="#menu-toggle-left" class="sidebar-toggle" id="menu-toggle-left" title="Filter by category"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
 
-            <div id="results-controlbar">
-                <a href="#!" id="refineBtn"><img class="icon" src="img/icon-refine.png">Refine</a>
-                <a href="#!" id="addAll">Add all to pack</a>
+                <div id="results-controlbar">
+                    <a href="#!" id="refineBtn"><img class="icon" src="img/icon-refine.png">Refine</a>
+                    <a href="#!" id="addAll">Add all to pack</a>
+                </div>
             </div>
 
             <div id="searchResultsPanel">
@@ -101,12 +103,17 @@
 
         <!-- Right Column -->
         <div class="middle-right">
-            <a href="#menu-toggle-right" class="sidebar-toggle" id="menu-toggle-right" title="Filter by category"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <div class="toolbar">
+                <a href="#menu-toggle-right" class="sidebar-toggle" id="menu-toggle-right">
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </a>
 
-            <div id="details-controlbar">
-                <a href="#!" id="newTab"><img class="icon" src="img/icon-newtab.png">Open in a new tab</a>
-                <a href="#!" id="print"><img class="icon" src="img/icon-print.png">Print</a>
+                <div id="details-controlbar">
+                    <a href="#!" id="newTab"><img class="icon" src="img/icon-newtab.png">Open in a new tab</a>
+                    <a href="#!" id="print"><img class="icon" src="img/icon-print.png">Print</a>
+                </div>
             </div>
+
 
             <!-- Refinement overlay -->
             <div class="overlay overlay-simplegenie">
