Full Upload with new arrows and Export To

--- a/allresults.html
+++ b/allresults.html
@@ -291,13 +291,13 @@
     
 //--- Loading Service Details ---//
 
-//    $('button').click(function (e) {
-//
-//        var buttonId = this.id;
-//        var fileName = buttonId + ".html";
-//
-//        e.preventDefault();
-//        $('#serviceDetailsPanel').load(fileName);
-//        
-//    });
+    $('button').click(function (e) {
+
+        var buttonId = this.id;
+        var fileName = buttonId + ".html";
+
+        e.preventDefault();
+        $('#serviceDetailsPanel').load(fileName);
+        
+    });
 </script>
