updated Readme and fixed QLD

--- a/alcohol.html
+++ b/alcohol.html
@@ -4,7 +4,7 @@
     <div class="serviceTile">
         <button id="23998" class="servicePreview">
             <h3 class="serviceName">On-Premises Licence - Victoria</h3>
-            <meta-label>Licence | QLD | Liquor and Alcohol Products and Services</meta-label>
+            <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
             <shortdesc>
                 <p>You will require this licence if you operate a business or club that supplies alcohol for consumption on the premises.</p>
             </shortdesc>
